--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,16 @@ services:
       - "5000:5000"
     depends_on:
       - puzzle_room_1
+      - puzzle_room_2
 
   puzzle_room_1:
     build: ./rooms/room_1
-    # ports for debug
-    ports:
-      - "5001:5001"
 
   puzzle_room_2:
     build: ./rooms/room_2
     
+  game_engine:
+    build: ./game_engine
+    ports:
+      - "5001:5001"
+  
